--- a/repo.yaml
+++ b/repo.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 data:
-  password: {{password}}
-  project: {{project}}
+  password: 
+  project: 
   type: Z2l0
-  url: {{url}}
-  username: {{username}}
+  url: 
+  username: 
 kind: Secret
 metadata:
   annotations:
     managed-by: argocd.argoproj.io
   labels:
     argocd.argoproj.io/secret-type: repository
-  name: repo-{{repo}}
+  name: 
   namespace: argocd
 type: Opaque
